    Default is horizontal. Set "0" to show vertically.
  - Add "odometer_maximum_digits" option, which sets maximum number of display digits.

* Instrument Widget
  - Changed default "layout" setting value to "1" for horizontal layout
    (as opposite to old "0" value) for consistency.
    User may need to edit old value to "1" to display horizontal layout.

* Tyre wear Widget
  - Now uses laptime pace for calculating "tyre lifespan in minutes".

* Weather forecast Widget
  - The "now" column always shows current weather conditon
    even if RestAPI Module is disabled.

* Misc
  - Added new contributor Sihyung Park (naturale0) to contributors.md.

2.17.4 (2024-08-30)
-----------------------------
* General
  - Fixed state check error while restarting API in rare case.
  - Add clickable API button on main window status bar
    that opens "Shared Memory API" config dialog for easy access.

* Fuel calculator
  - Fixed an error when calculating with Gallon unit.

* Relative finish order Widget
  - Add "show_extra_refilling" option, which shows readings of extra refilling row
    below "local player's refilling" row. Each extra refilling value equals "extra laps
    of consumption" plus "local player's refilling" value of same column.
    Those values save the trouble from manual calculation in case there will be extra laps.
    The first column of extra refilling row shows number of extra laps depends on
    "number of extra laps" setting, such as "EX+1" for 1 extra lap, or "EX+3" for 3 extra laps.
  - Add "number_of_extra_laps" option, which sets number of extra laps for extra refilling calculation.
    Default is "1" extra lap.
  - Updated usage and examples for Relative finish order Widget in User Guide.

2.17.3 (2024-08-19)
-----------------------------
* General
  - Fixed a bug (introduced in v2.17.0) in API connector that would cause TinyPedal to stop work
    when user selected "LMU API" in Shared Memory API config dialog.