@@ -946,11 +946,13 @@ WIDGET_DEFAULT = {
         "bkg_color_battery_charge": "#0055ff",
         "bkg_color_battery_drain": "#FF6600",
         "bkg_color_battery_regen": "#22AA00",
+        "font_color_battery_cooldown": "#AAAAAA",
+        "bkg_color_battery_cooldown": "#222222",
         "show_activation_timer": True,
         "font_color_activation_timer": "#222222",
         "bkg_color_activation_timer": "#EEEEEE",
-        "font_color_inactive": "#999999",
-        "bkg_color_inactive": "#222222",
+        "font_color_activation_cooldown": "#999999",
+        "bkg_color_activation_cooldown": "#EEEEEE",
         "activation_threshold_gear": 3,
         "activation_threshold_speed": 120,
         "activation_threshold_throttle": 0.6,
